# Floatkit

./: .gitignore  DesktopAssistant.sln  Floatkit.sln  NOTICE  README.md
.github/workflows/: build-release.yaml
DesktopAssistant/: DesktopAssistant.cpp  DesktopAssistant.h  DesktopAssistant.rc  DesktopAssistant.vcxproj  DesktopAssistant.vcxproj.filters  Handle2d.cpp  Handle2d.h  Handle3d.cpp  Handle3d.h  NotifyIcon.cpp  Waifu.cpp  Waifu.h  glad.c  minimal.frag  minimal.vert  resource.h
DesktopAssistant/assets/: roxy.cfg
Floatkit/: Animate.cpp  Animate.h  CMakeLists.txt  Floatkit.cpp  Floatkit.filters  Floatkit.h  Floatkit.rc  Floatkit.vcxproj  NotifyIcon.cpp  resource.h
Floatkit/assets/cat/: cat.cfg
Floatkit/assets/gif/: miku.cfg
TestGlfw3/: DesktopAssistant.h  DesktopAssistant.rc  Main.cpp  NotifyIcon.cpp  TestGlfw3.vcxproj  TestGlfw3.vcxproj.filters  resource.h
